Funzione impostazioni, file impostazioni, aggiunta tramite GUI
tramite un file ora siamo in grado di trasportarci le impostazioni dell'utente dall'interfaccia grafica (in java) allo script (in python). Nel python è stata fatta una funzione che permette di leggere questo file e di aggiungere i valori in un array già formattato per l'utilizzo.
Nel java è stata aggiunta la possibilità di eseguire lo script di aggiunta delle fotografie, ed è stata integrata con le funzioni dell'interfaccia grafica Java. Ora si possono aggiungere utenti comodamente dall'interfaccia grafica.